# rubirc

./: Doxyfile  meson.build  readme.md  rubirc.spec
data/: rubirc.gresource.xml
data/icons/: meson.build
data/man/: meson.build  rubirc.1.in
data/misc/: io.github.RUBIRC.Plugin.metainfo.xml.in  io.github.RUBIRC.ThemeManager.desktop.in  io.github.RUBIRC.ThemeManager.xml  io.github.RUBIRC.appdata.xml.in  io.github.RUBIRC.desktop.in.in  meson.build
data/pkgconfig/: meson.build  rubirc-plugin.pc.in
flatpak/: Load-plugins-from-Flatpak-extensions.patch  io.github.RUBIRC.json
flatpak/shared-modules/libcanberra/: 0001-gtk-Don-t-assume-all-GdkDisplays-are-GdkX11Displays-.patch
flatpak/shared-modules/pygame/: audiofile-gcc6.patch
osx/: Info.plist.in  gtkrc  launcher.sh  makebundle.sh  rubirc.bundle  rubirc.icns
plugins/: meson.build
plugins/checksum/: checksum.c  checksum.vcxproj  meson.build
plugins/exec/: exec.c  exec.vcxproj  meson.build
plugins/fishlim/: dh1080.c  dh1080.h  fishlim.def  fishlim.vcxproj  fishlim.vcxproj.filters  keystore.c  meson.build  plugin_rubirc.c  plugin_rubirc.h  utils.h
plugins/fishlim/tests/: meson.build
plugins/lua/: lua.c  lua.vcxproj  meson.build
plugins/perl/: generate_header  meson.build  perl.c  perl.def  perl.vcxproj
plugins/perl/lib/: RUBIRC.pm  Xchat.pm
plugins/perl/lib/RUBIRC/: Embed.pm
plugins/perl/lib/RUBIRC/List/: Network.pm
plugins/python/: _rubirc.py  generate_plugin.py  meson.build  python.py  python2.vcxproj  python3.vcxproj  python3.vcxproj.filters  python_style_guide.md  xchat.py
plugins/sysinfo/: format.c  format.h  meson.build  sysinfo-backend.h  sysinfo.c  sysinfo.def  sysinfo.h  sysinfo.vcxproj
plugins/sysinfo/osx/: backend.m
plugins/sysinfo/unix/: backend.c
plugins/sysinfo/win32/: backend.c
plugins/upd/: meson.build  upd.c  upd.vcxproj
plugins/winamp/: meson.build  winamp.c  winamp.vcxproj
po/: POTFILES  POTFILES.skip  af.po  am.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  id.po  it.po  ja_JP.po  kn.po  ko.po  lt.po  lv.po  meson.build  mk.po  ml.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  (+16 more)
src/: version-script
src/common/: cfgfiles.c  cfgfiles.h  chanopt.c  chanopt.h  common.vcxproj  common.vcxproj.filters  ctcp.c  ctcp.h  dcc.c  dcc.h  fe.h  history.h  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  meson.build  modes.c  modes.h  network.h  notify.c  notify.h  outbound.c  outbound.h  plugin-identd.c  plugin-identd.h  plugin-timer.c  plugin-timer.h  plugin.c  plugin.h  proto-irc.c  proto-irc.h  rubirc-plugin.h  rubirc.c  rubirc.h  rubircc.h  server.c  server.h  servlist.c  (+13 more)
src/common/dbus/: dbus-client.c  dbus-client.h  dbus-plugin.c  dbus-plugin.h  example.c  example.py  meson.build  org.rubirc.service.service.in  remote-object.xml
src/common/sysinfo/: sysinfo.h
src/common/sysinfo/win32/: backend.c
src/fe-gtk/: ascii.c  ascii.h  banlist.c  banlist.h  chanlist.c  chanlist.h  chanview-tabs.c  chanview-tree.c  chanview.c  chanview.h  custom-list.c  custom-list.h  dccgui.c  editlist.c  editlist.h  fe-gtk.c  fe-gtk.h  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.c  fkeys.h  gtkutil.c  gtkutil.h  ignoregui.c  joind.c  joind.h  maingui.c  maingui.h  menu.c  menu.h  meson.build  notifygui.c  notifygui.h  palette.c  palette.h  pixmaps.c  pixmaps.h  plugin-notification.c  plugin-notification.h  plugin-tray.c  (+19 more)
src/fe-gtk/notifications/: notification-backend.h  notification-dummy.c  notification-freedesktop.c  notification-osx.m  notification-windows.c  notification-winrt.cpp  notifications-winrt.vcxproj
src/fe-text/: fe-text.c  fe-text.h  fe-text.vcxproj  meson.build
src/htm/: Main.Designer.cs  Main.cs  Program.cs  README.md  htm.csproj
src/htm/Properties/: AssemblyInfo.cs
src/libenchant_win8/: libenchant_win8.vcxproj  win8_provider.cpp
win32/: config.h.tt  rubirc.exe.manifest  rubirc.props  rubirc.sln
win32/copy/: changelog.url  copy.vcxproj  readme.url
win32/installer/: installer.vcxproj  installer.vcxproj.filters  rubirc.iss.tt
win32/nls/: nls.vcxproj
win32/spelling/: build-spelling.bat  rubirc-spelling.skel.iss
(+2 files in other folders)
